--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -7,6 +7,7 @@
     }
     h3 {
       margin-top: 20px; /* 添加标题上边距 */
+      cursor: pointer; /* 添加标题鼠标样式 */
     }
     h4 {
       margin-bottom: 10px; /* 添加副标题下边距 */
@@ -16,12 +17,41 @@
     }
     ul {
       margin-left: 40px; /* 添加列表左边距 */
+      display: none; /* 默认隐藏列表 */
     }
     li {
       margin-bottom: 5px; /* 添加列表项下边距 */
     }
   </style>
+  <script>
+    // 定义一个函数，用于切换列表的显示状态
+    function toggleList(event) {
+      // 获取当前点击的标题元素
+      var h3 = event.target;
+      // 获取标题元素的下一个兄弟元素，即列表元素
+      var ul = h3.nextElementSibling;
+      // 判断列表元素的显示状态，如果是none，则改为block，否则改为none
+      if (ul.style.display == "none") {
+        ul.style.display = "block";
+      } else {
+        ul.style.display = "none";
+      }
+    }
+    // 定义一个函数，用于为所有的标题元素添加点击事件监听器
+    function addListeners() {
+      // 获取所有的标题元素
+      var h3s = document.getElementsByTagName("h3");
+      // 遍历所有的标题元素
+      for (var i = 0; i < h3s.length; i++) {
+        // 为每个标题元素添加点击事件监听器，调用toggleList函数
+        h3s[i].addEventListener("click", toggleList);
+      }
+    }
+    // 在页面加载完成后，调用addListeners函数
+    window.onload = addListeners;
+  </script>
 </head>
+
 
 <h3>开发中的版本</h3>
 <h4>2.05版本</h4>
