--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -25,40 +25,24 @@
   </style>
   <script>
     // 定义一个函数，用于切换列表的显示状态
-    function toggleList(event) {
-      // 获取当前点击的标题元素
-      var h3 = event.target;
-      // 获取标题元素的下一个兄弟元素，即列表元素
+    function toggleList(h3) {
+      // 获取h3元素的下一个兄弟元素，即ul元素
       var ul = h3.nextElementSibling;
-      // 判断列表元素的显示状态，如果是none，则改为block，否则改为none
+      // 判断ul元素的显示状态，如果是none，则改为block，否则改为none
       if (ul.style.display == "none") {
         ul.style.display = "block";
       } else {
         ul.style.display = "none";
       }
     }
-    // 定义一个函数，用于为所有的标题元素添加点击事件监听器
-    function addListeners() {
-      // 获取所有的标题元素
-      var h3s = document.getElementsByTagName("h3");
-      // 遍历所有的标题元素
-      for (var i = 0; i < h3s.length; i++) {
-        // 为每个标题元素添加点击事件监听器，调用toggleList函数
-        h3s[i].addEventListener("click", toggleList);
-      }
-    }
-    // 在页面加载完成后，调用addListeners函数
-    window.onload = addListeners;
   </script>
 </head>
 
-
-<h3>开发中的版本</h3>
+<h3 onclick="toggleList(this)">开发中的版本</h3> <!-- 添加点击事件 -->
 <h4>2.05版本</h4>
 <p>主要更新：</p>
 <ul>
   <li>病毒库更新</li>
-  <li>选中按钮也会有悬停效果</li>
   <li>后台扫描多线程</li>
   <li>部分组件支持unicode</li>
   <li>公用桌面后台扫描</li>
@@ -74,7 +58,7 @@
   <li>其他杀软可能会一直拦截启动项（已修复，感谢 @Winner365 的反馈）</li>
 </ul>
 
-<h3>最新版本</h3>
+<h3 onclick="toggleList(this)">最新版本</h3> <!-- 添加点击事件 -->
 <h4>2.04版本</h4>
 <p>主要更新：</p>
 <ul>
@@ -93,6 +77,7 @@
   <li>在使用中文时文字显示可能会异常（未修复）</li>
   <li>语言包错误（已修复）</li>
 </ul>
+
 
 <h3>往期版本</h3>
 
